vlib/v/checker/tests/array_sort_struct_no_body_err.out
vlib/v/checker/tests/array_sort_struct_no_body_err.vv:6:5: error: a default comparison function for `.sort()` cannot be generated for type `Foo`
    4 | 
    5 | mut arr := []Foo{}
    6 | arr.sort()
      |     ~~~~~~
