vlib/v/checker/tests/array_sort_struct_no_body_err.vv
struct Foo {
	bar int
}

mut arr := []Foo{}
arr.sort()
